test/cases/parser/AssignError2.errors
AssignError2.b:5:5: Syntax error (expected statement)
